--- a/tasks.html
+++ b/tasks.html
@@ -37,7 +37,6 @@ import logging
 from pathlib import Path
 from typing import Union, Optional, Dict, Tuple, List
 from time import sleep
-from mutagen.id3 import APIC, ID3
 
 import appdirs
 from colorama import init, Fore
@@ -391,7 +390,7 @@ class TaskQueue:
                 try:
                     follow_up = op.follow_up_task()
                     self.put(follow_up, priority=-1)
-                    lg.info(f&#34;queuing follow-up task: {follow_up}&#34;)
+                    lg.info(f&#34;queued follow-up task: {follow_up}&#34;)
                 except:
                     pass
 
@@ -684,7 +683,7 @@ class SimpleConvertTask(CopyTask):
     &#34;&#34;&#34;convert an audio file&#34;&#34;&#34;
     def __init__(self, src: Pathish, dst: Pathish, converter: converters.Converter) -&gt; None:
         super().__init__(src=src, dst=dst)
-        self.type = TaskType.CONVERT
+        self.type = TaskType.CONVERT_SIMPLE
         self.converter = converter
         self.src = Path(src).resolve()
         self.dst = Path(dst).resolve()
@@ -735,11 +734,6 @@ class ConvertTask(SimpleConvertTask):
         super().__validate__()
         lg.debug(f&#34;converting file to temporary destination: {self.tmpdst}&#34;)
         self.converter.run(self.src, self.tmpdst)
-
-        # remove cover art tags
-        file = ID3(self.tmpdst)
-        file.delall(&#34;APIC&#34;)  # Delete every APIC tag (Cover art)
-        file.save()  # Save the file
 
     def follow_up_task(self) -&gt; MoveTask:
         # follow_up_task requires that the task was retrieved from the queue and therefore already as an oid that
@@ -928,11 +922,6 @@ This makes it possible to cleanly separate transcode and transfer processes.</p>
         super().__validate__()
         lg.debug(f&#34;converting file to temporary destination: {self.tmpdst}&#34;)
         self.converter.run(self.src, self.tmpdst)
-
-        # remove cover art tags
-        file = ID3(self.tmpdst)
-        file.delall(&#34;APIC&#34;)  # Delete every APIC tag (Cover art)
-        file.save()  # Save the file
 
     def follow_up_task(self) -&gt; MoveTask:
         # follow_up_task requires that the task was retrieved from the queue and therefore already as an oid that
@@ -1585,7 +1574,7 @@ def total(self):
     &#34;&#34;&#34;convert an audio file&#34;&#34;&#34;
     def __init__(self, src: Pathish, dst: Pathish, converter: converters.Converter) -&gt; None:
         super().__init__(src=src, dst=dst)
-        self.type = TaskType.CONVERT
+        self.type = TaskType.CONVERT_SIMPLE
         self.converter = converter
         self.src = Path(src).resolve()
         self.dst = Path(dst).resolve()
@@ -2314,7 +2303,7 @@ be 1.
                 try:
                     follow_up = op.follow_up_task()
                     self.put(follow_up, priority=-1)
-                    lg.info(f&#34;queuing follow-up task: {follow_up}&#34;)
+                    lg.info(f&#34;queued follow-up task: {follow_up}&#34;)
                 except:
                     pass
 
