--- a/index.html
+++ b/index.html
@@ -26,15 +26,19 @@
 <section>
 <h2 class="section-title" id="header-submodules">Sub-modules</h2>
 <dl>
+<dt><code class="name"><a title="qop.cli" href="cli.html">qop.cli</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
+<dt><code class="name"><a title="qop.config" href="config.html">qop.config</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="qop.converters" href="converters.html">qop.converters</a></code></dt>
 <dd>
 <div class="desc"></div>
 </dd>
 <dt><code class="name"><a title="qop.daemon" href="daemon.html">qop.daemon</a></code></dt>
-<dd>
-<div class="desc"></div>
-</dd>
-<dt><code class="name"><a title="qop.enums" href="enums.html">qop.enums</a></code></dt>
 <dd>
 <div class="desc"></div>
 </dd>
@@ -71,9 +75,10 @@
 <ul id="index">
 <li><h3><a href="#header-submodules">Sub-modules</a></h3>
 <ul>
+<li><code><a title="qop.cli" href="cli.html">qop.cli</a></code></li>
+<li><code><a title="qop.config" href="config.html">qop.config</a></code></li>
 <li><code><a title="qop.converters" href="converters.html">qop.converters</a></code></li>
 <li><code><a title="qop.daemon" href="daemon.html">qop.daemon</a></code></li>
-<li><code><a title="qop.enums" href="enums.html">qop.enums</a></code></li>
 <li><code><a title="qop.exceptions" href="exceptions.html">qop.exceptions</a></code></li>
 <li><code><a title="qop.scanners" href="scanners.html">qop.scanners</a></code></li>
 <li><code><a title="qop.tasks" href="tasks.html">qop.tasks</a></code></li>
