--- a/cli.html
+++ b/cli.html
@@ -32,6 +32,7 @@ import logging
 from pathlib import Path
 from typing import Dict, Union, Optional
 from time import sleep
+import json
 
 import appdirs
 from tqdm import tqdm, trange
@@ -78,7 +79,7 @@ def handle_re(args, client) -&gt; Dict:
 def handle_copy_move(args, client) -&gt; Dict:
     sources = args.paths[:-1]
     dst_dir = args.paths[-1]
-    is_queue_running = client.is_queue_active()
+    is_queue_active = client.is_queue_active()
 
     assert isinstance(dst_dir, str)
     assert len(sources) &gt; 0
@@ -119,9 +120,9 @@ def handle_copy_move(args, client) -&gt; Dict:
 
             rsp = client.send_command(Command.QUEUE_PUT, payload=tsk)
 
-            if not is_queue_running and not args.enqueue_only:
+            if not is_queue_active and not args.enqueue_only:
                 client.send_command(Command.QUEUE_START)
-                is_queue_running = True
+                is_queue_active = True
 
             if args.verbose:
                 print(format_response(rsp))
@@ -136,7 +137,7 @@ def handle_copy_move(args, client) -&gt; Dict:
 def handle_convert(args, client) -&gt; Dict:
     sources = args.paths[:-1]
     dst_dir = args.paths[-1]
-    is_queue_running = client.is_queue_active()
+    is_queue_active = client.is_queue_active()
 
     assert isinstance(dst_dir, str)
     assert len(sources) &gt; 0
@@ -205,9 +206,9 @@ def handle_convert(args, client) -&gt; Dict:
 
             rsp = client.send_command(Command.QUEUE_PUT, payload=tsk)
 
-            if not is_queue_running and not args.enqueue_only:
+            if not is_queue_active and not args.enqueue_only:
                 client.send_command(Command.QUEUE_START)
-                is_queue_running = True
+                is_queue_active = True
 
             if args.verbose:
                 print(format_response(rsp))
@@ -221,7 +222,7 @@ def handle_convert(args, client) -&gt; Dict:
 
 def handle_daemon_stop(args, client) -&gt; Dict:
     if not client.is_daemon_active():
-        return {&#34;status&#34;: Status.SKIP, &#34;msg&#34;: &#34;daemon is not running&#34;, &#34;payload&#34;: {&#34;value&#34;: True}, &#34;payload_class&#34;: PayloadClass.VALUE}
+        return {&#34;status&#34;: Status.SKIP, &#34;msg&#34;: &#34;daemon is not active&#34;, &#34;payload&#34;: {&#34;value&#34;: True}, &#34;payload_class&#34;: PayloadClass.VALUE}
 
     return client.send_command(Command.DAEMON_STOP)
 
@@ -234,7 +235,7 @@ def handle_daemon_destroy(args, client) -&gt; Dict:
 def handle_daemon_start(args, client) -&gt; Dict:
     # launch daemon
     if client.is_daemon_active():
-        return {&#34;status&#34;: Status.SKIP, &#34;msg&#34;: &#34;daemon is already running&#34;, &#34;payload&#34;: {&#34;value&#34;: True}, &#34;payload_class&#34;: PayloadClass.VALUE}
+        return {&#34;status&#34;: Status.SKIP, &#34;msg&#34;: &#34;daemon is already active&#34;, &#34;payload&#34;: {&#34;value&#34;: True}, &#34;payload_class&#34;: PayloadClass.VALUE}
     else:
         qop_exc = Path(__file__).resolve().parents[1].joinpath(&#34;qopd.py&#34;)
         assert qop_exc.exists()
@@ -244,23 +245,23 @@ def handle_daemon_start(args, client) -&gt; Dict:
 
 
 def handle_daemon_restart(args, client) -&gt; Dict:
-    was_running = client.is_daemon_active()
+    was_active = client.is_daemon_active()
     handle_daemon_stop(args, client)
     wait_for_daemon(client, status=0)
     was_stopped = not client.is_daemon_active()
     handle_daemon_start(args, client)
     wait_for_daemon(client)
-    is_running = client.is_daemon_active()
+    is_active = client.is_daemon_active()
 
-    if is_running:
-        if not was_running:
+    if is_active:
+        if not was_active:
             return {&#34;status&#34;: Status.OK, &#34;msg&#34;: &#34;daemon started&#34;, &#34;payload&#34;: {&#34;value&#34;: True}, &#34;payload_class&#34;: PayloadClass.VALUE}
         elif not was_stopped:
-            return {&#34;status&#34;: Status.FAIL, &#34;msg&#34;: &#34;daemon is still running but was not restarted&#34;, &#34;payload&#34;: {&#34;value&#34;: True}, &#34;payload_class&#34;:PayloadClass.VALUE}
+            return {&#34;status&#34;: Status.FAIL, &#34;msg&#34;: &#34;daemon is still active but was not restarted&#34;, &#34;payload&#34;: {&#34;value&#34;: True}, &#34;payload_class&#34;:PayloadClass.VALUE}
         else:
             return {&#34;status&#34;: Status.OK, &#34;msg&#34;: &#34;daemon restarted&#34;, &#34;payload&#34;: {&#34;value&#34;: True}, &#34;payload_class&#34;: PayloadClass.VALUE}
     else:
-        if was_running:
+        if was_active:
             return {&#34;status&#34;: Status.FAIL, &#34;msg&#34;: &#34;could not restart daemon (daemon is offline)&#34;, &#34;payload&#34;: {&#34;value&#34;: False}, &#34;payload_class&#34;: PayloadClass.VALUE}
         else:
             return {&#34;status&#34;: Status.FAIL, &#34;msg&#34;: &#34;could not start daemon (daemon is offline)&#34;, &#34;payload&#34;: {&#34;value&#34;: False}, &#34;payload_class&#34;: PayloadClass.VALUE}
@@ -268,7 +269,7 @@ def handle_daemon_restart(args, client) -&gt; Dict:
 
 def handle_daemon_is_active(args, client):
     if client.is_daemon_active():
-        return {&#34;status&#34;: Status.OK, &#34;msg&#34;: &#34;daemon is running&#34;, &#34;payload&#34;: {&#34;value&#34;: True}, &#34;payload_class&#34;: PayloadClass.VALUE}
+        return {&#34;status&#34;: Status.OK, &#34;msg&#34;: &#34;daemon is active&#34;, &#34;payload&#34;: {&#34;value&#34;: True}, &#34;payload_class&#34;: PayloadClass.VALUE}
     else:
         return {&#34;status&#34;: Status.OK, &#34;msg&#34;: &#34;no daemon found&#34;, &#34;payload&#34;:  {&#34;value&#34;: False}, &#34;payload_class&#34;: PayloadClass.VALUE}
 
@@ -278,44 +279,39 @@ def handle_simple_command(args, client):
 
 
 def handle_queue_progress(args, client):
-    info = client.get_queue_progress()
+    facts = client.gather_facts()
 
-    if info.total == 0:
+    if facts[&#39;tasks.total&#39;] == 0:
         return {&#34;status&#34;: Status.OK, &#34;msg&#34;: &#34;queue is empty&#34;}
 
-    max_processes = client.max_processes
+    max_processes = facts[&#34;processes.max&#34;]
 
-    with tqdm(total=info.total, initial=info.total - info.pending) as pbar:
-
+    with tqdm(total=facts[&#39;tasks.total&#39;], initial=facts[&#39;tasks.total&#39;] - facts[&#39;tasks.pending&#39;]) as pbar:
         bars = [tqdm(bar_format=&#34;{desc}&#34;) for x in range(max_processes + 1)]
-
         while True:
             sleep(0.1)
-
-            is_daemon_active = client.is_daemon_active()
-            active_processes = client.active_processes
-            running_tasks = client.running_tasks[&#39;payload&#39;]
+            active_tasks = client.active_tasks[&#39;payload&#39;]
 
             for i in range(len(bars) - 1):
                 # keep bar 0 empty so that we get a blank line between the real progress bar and the tasks
-                if 0 &lt; i &lt;= len(running_tasks):
-                    t = tasks.Task.from_dict(running_tasks[i - 1][&#39;task&#39;]).color_repr()
+                if 0 &lt; i &lt;= len(active_tasks):
+                    t = tasks.Task.from_dict(active_tasks[i - 1][&#39;task&#39;]).color_repr()
                     bars[i].desc = t
                     bars[i].update()
-                elif i &gt; len(running_tasks):
-                    bars[i].desc = config.EL + &#34;..idle..&#34;
-                    # bars[i].update()
+                elif i &gt; len(active_tasks):
+                    bars[i].desc = config.EL
+                    bars[i].update()
             try:
-                info = client.get_queue_progress()
-                pbar.set_description(f&#34;{active_processes} processes&#34;)
-                pbar.update(info.total - info.pending - pbar.n)
+                facts = client.gather_facts()
+                pbar.set_description(f&#34;{facts[&#39;processes.active&#39;]} processes&#34;)
+                pbar.update(facts[&#39;tasks.total&#39;] - facts[&#39;tasks.pending&#39;] - pbar.n)
             except:
                 pass
 
-            if not is_daemon_active or active_processes &lt; 1:
+            if not client.is_daemon_active() or facts[&#39;processes.active&#39;] &lt; 1:
                 break
 
-    if info.total == info.ok + info.skip:
+    if facts[&#39;tasks.total&#39;] == facts[&#39;tasks.ok&#39;] + facts[&#39;tasks.skip&#39;]:
         return {&#34;status&#34;: Status.OK, &#34;msg&#34;: &#34;all files transferred successfully&#34;}
     else:
         return {&#34;status&#34;: Status.FAIL, &#34;msg&#34;: &#34;could not transfer all files&#34;}
@@ -338,7 +334,7 @@ def format_response(rsp) -&gt; str:
         elif plc == PayloadClass.TASK_LIST:
             res = &#34;\n&#34;.join([tasks.Task.from_dict(x[&#39;task&#39;]).color_repr() for x in payload]) + &#34;\n\n&#34; + res
         else:
-            res = res + str(payload)
+            res = res + &#39;\n&#39; + json.dumps(payload, indent=4)
 
     if &#39;msg&#39; in rsp.keys():
         res = res + f&#34;{Fore.YELLOW}[{rsp[&#39;msg&#39;]}]{Fore.RESET}&#34;
@@ -449,7 +445,7 @@ def wait_for_daemon(client, timeout: int = 10, status: int = 1) -&gt; None:
         elif plc == PayloadClass.TASK_LIST:
             res = &#34;\n&#34;.join([tasks.Task.from_dict(x[&#39;task&#39;]).color_repr() for x in payload]) + &#34;\n\n&#34; + res
         else:
-            res = res + str(payload)
+            res = res + &#39;\n&#39; + json.dumps(payload, indent=4)
 
     if &#39;msg&#39; in rsp.keys():
         res = res + f&#34;{Fore.YELLOW}[{rsp[&#39;msg&#39;]}]{Fore.RESET}&#34;
@@ -487,7 +483,7 @@ def wait_for_daemon(client, timeout: int = 10, status: int = 1) -&gt; None:
 <pre><code class="python">def handle_convert(args, client) -&gt; Dict:
     sources = args.paths[:-1]
     dst_dir = args.paths[-1]
-    is_queue_running = client.is_queue_active()
+    is_queue_active = client.is_queue_active()
 
     assert isinstance(dst_dir, str)
     assert len(sources) &gt; 0
@@ -556,9 +552,9 @@ def wait_for_daemon(client, timeout: int = 10, status: int = 1) -&gt; None:
 
             rsp = client.send_command(Command.QUEUE_PUT, payload=tsk)
 
-            if not is_queue_running and not args.enqueue_only:
+            if not is_queue_active and not args.enqueue_only:
                 client.send_command(Command.QUEUE_START)
-                is_queue_running = True
+                is_queue_active = True
 
             if args.verbose:
                 print(format_response(rsp))
@@ -582,7 +578,7 @@ def wait_for_daemon(client, timeout: int = 10, status: int = 1) -&gt; None:
 <pre><code class="python">def handle_copy_move(args, client) -&gt; Dict:
     sources = args.paths[:-1]
     dst_dir = args.paths[-1]
-    is_queue_running = client.is_queue_active()
+    is_queue_active = client.is_queue_active()
 
     assert isinstance(dst_dir, str)
     assert len(sources) &gt; 0
@@ -623,9 +619,9 @@ def wait_for_daemon(client, timeout: int = 10, status: int = 1) -&gt; None:
 
             rsp = client.send_command(Command.QUEUE_PUT, payload=tsk)
 
-            if not is_queue_running and not args.enqueue_only:
+            if not is_queue_active and not args.enqueue_only:
                 client.send_command(Command.QUEUE_START)
-                is_queue_running = True
+                is_queue_active = True
 
             if args.verbose:
                 print(format_response(rsp))
@@ -662,7 +658,7 @@ def wait_for_daemon(client, timeout: int = 10, status: int = 1) -&gt; None:
 </summary>
 <pre><code class="python">def handle_daemon_is_active(args, client):
     if client.is_daemon_active():
-        return {&#34;status&#34;: Status.OK, &#34;msg&#34;: &#34;daemon is running&#34;, &#34;payload&#34;: {&#34;value&#34;: True}, &#34;payload_class&#34;: PayloadClass.VALUE}
+        return {&#34;status&#34;: Status.OK, &#34;msg&#34;: &#34;daemon is active&#34;, &#34;payload&#34;: {&#34;value&#34;: True}, &#34;payload_class&#34;: PayloadClass.VALUE}
     else:
         return {&#34;status&#34;: Status.OK, &#34;msg&#34;: &#34;no daemon found&#34;, &#34;payload&#34;:  {&#34;value&#34;: False}, &#34;payload_class&#34;: PayloadClass.VALUE}</code></pre>
 </details>
@@ -677,23 +673,23 @@ def wait_for_daemon(client, timeout: int = 10, status: int = 1) -&gt; None:
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">def handle_daemon_restart(args, client) -&gt; Dict:
-    was_running = client.is_daemon_active()
+    was_active = client.is_daemon_active()
     handle_daemon_stop(args, client)
     wait_for_daemon(client, status=0)
     was_stopped = not client.is_daemon_active()
     handle_daemon_start(args, client)
     wait_for_daemon(client)
-    is_running = client.is_daemon_active()
+    is_active = client.is_daemon_active()
 
-    if is_running:
-        if not was_running:
+    if is_active:
+        if not was_active:
             return {&#34;status&#34;: Status.OK, &#34;msg&#34;: &#34;daemon started&#34;, &#34;payload&#34;: {&#34;value&#34;: True}, &#34;payload_class&#34;: PayloadClass.VALUE}
         elif not was_stopped:
-            return {&#34;status&#34;: Status.FAIL, &#34;msg&#34;: &#34;daemon is still running but was not restarted&#34;, &#34;payload&#34;: {&#34;value&#34;: True}, &#34;payload_class&#34;:PayloadClass.VALUE}
+            return {&#34;status&#34;: Status.FAIL, &#34;msg&#34;: &#34;daemon is still active but was not restarted&#34;, &#34;payload&#34;: {&#34;value&#34;: True}, &#34;payload_class&#34;:PayloadClass.VALUE}
         else:
             return {&#34;status&#34;: Status.OK, &#34;msg&#34;: &#34;daemon restarted&#34;, &#34;payload&#34;: {&#34;value&#34;: True}, &#34;payload_class&#34;: PayloadClass.VALUE}
     else:
-        if was_running:
+        if was_active:
             return {&#34;status&#34;: Status.FAIL, &#34;msg&#34;: &#34;could not restart daemon (daemon is offline)&#34;, &#34;payload&#34;: {&#34;value&#34;: False}, &#34;payload_class&#34;: PayloadClass.VALUE}
         else:
             return {&#34;status&#34;: Status.FAIL, &#34;msg&#34;: &#34;could not start daemon (daemon is offline)&#34;, &#34;payload&#34;: {&#34;value&#34;: False}, &#34;payload_class&#34;: PayloadClass.VALUE}</code></pre>
@@ -711,7 +707,7 @@ def wait_for_daemon(client, timeout: int = 10, status: int = 1) -&gt; None:
 <pre><code class="python">def handle_daemon_start(args, client) -&gt; Dict:
     # launch daemon
     if client.is_daemon_active():
-        return {&#34;status&#34;: Status.SKIP, &#34;msg&#34;: &#34;daemon is already running&#34;, &#34;payload&#34;: {&#34;value&#34;: True}, &#34;payload_class&#34;: PayloadClass.VALUE}
+        return {&#34;status&#34;: Status.SKIP, &#34;msg&#34;: &#34;daemon is already active&#34;, &#34;payload&#34;: {&#34;value&#34;: True}, &#34;payload_class&#34;: PayloadClass.VALUE}
     else:
         qop_exc = Path(__file__).resolve().parents[1].joinpath(&#34;qopd.py&#34;)
         assert qop_exc.exists()
@@ -731,7 +727,7 @@ def wait_for_daemon(client, timeout: int = 10, status: int = 1) -&gt; None:
 </summary>
 <pre><code class="python">def handle_daemon_stop(args, client) -&gt; Dict:
     if not client.is_daemon_active():
-        return {&#34;status&#34;: Status.SKIP, &#34;msg&#34;: &#34;daemon is not running&#34;, &#34;payload&#34;: {&#34;value&#34;: True}, &#34;payload_class&#34;: PayloadClass.VALUE}
+        return {&#34;status&#34;: Status.SKIP, &#34;msg&#34;: &#34;daemon is not active&#34;, &#34;payload&#34;: {&#34;value&#34;: True}, &#34;payload_class&#34;: PayloadClass.VALUE}
 
     return client.send_command(Command.DAEMON_STOP)</code></pre>
 </details>
@@ -773,44 +769,39 @@ def wait_for_daemon(client, timeout: int = 10, status: int = 1) -&gt; None:
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">def handle_queue_progress(args, client):
-    info = client.get_queue_progress()
+    facts = client.gather_facts()
 
-    if info.total == 0:
+    if facts[&#39;tasks.total&#39;] == 0:
         return {&#34;status&#34;: Status.OK, &#34;msg&#34;: &#34;queue is empty&#34;}
 
-    max_processes = client.max_processes
+    max_processes = facts[&#34;processes.max&#34;]
 
-    with tqdm(total=info.total, initial=info.total - info.pending) as pbar:
-
+    with tqdm(total=facts[&#39;tasks.total&#39;], initial=facts[&#39;tasks.total&#39;] - facts[&#39;tasks.pending&#39;]) as pbar:
         bars = [tqdm(bar_format=&#34;{desc}&#34;) for x in range(max_processes + 1)]
-
         while True:
             sleep(0.1)
-
-            is_daemon_active = client.is_daemon_active()
-            active_processes = client.active_processes
-            running_tasks = client.running_tasks[&#39;payload&#39;]
+            active_tasks = client.active_tasks[&#39;payload&#39;]
 
             for i in range(len(bars) - 1):
                 # keep bar 0 empty so that we get a blank line between the real progress bar and the tasks
-                if 0 &lt; i &lt;= len(running_tasks):
-                    t = tasks.Task.from_dict(running_tasks[i - 1][&#39;task&#39;]).color_repr()
+                if 0 &lt; i &lt;= len(active_tasks):
+                    t = tasks.Task.from_dict(active_tasks[i - 1][&#39;task&#39;]).color_repr()
                     bars[i].desc = t
                     bars[i].update()
-                elif i &gt; len(running_tasks):
-                    bars[i].desc = config.EL + &#34;..idle..&#34;
-                    # bars[i].update()
+                elif i &gt; len(active_tasks):
+                    bars[i].desc = config.EL
+                    bars[i].update()
             try:
-                info = client.get_queue_progress()
-                pbar.set_description(f&#34;{active_processes} processes&#34;)
-                pbar.update(info.total - info.pending - pbar.n)
+                facts = client.gather_facts()
+                pbar.set_description(f&#34;{facts[&#39;processes.active&#39;]} processes&#34;)
+                pbar.update(facts[&#39;tasks.total&#39;] - facts[&#39;tasks.pending&#39;] - pbar.n)
             except:
                 pass
 
-            if not is_daemon_active or active_processes &lt; 1:
+            if not client.is_daemon_active() or facts[&#39;processes.active&#39;] &lt; 1:
                 break
 
-    if info.total == info.ok + info.skip:
+    if facts[&#39;tasks.total&#39;] == facts[&#39;tasks.ok&#39;] + facts[&#39;tasks.skip&#39;]:
         return {&#34;status&#34;: Status.OK, &#34;msg&#34;: &#34;all files transferred successfully&#34;}
     else:
         return {&#34;status&#34;: Status.FAIL, &#34;msg&#34;: &#34;could not transfer all files&#34;}</code></pre>
