deploy: 684674403cdf200b37b79216163ec3d663fc0c6c

--- a/genindex.html
+++ b/genindex.html
@@ -171,7 +171,6 @@
  | <a href="#T"><strong>T</strong></a>
  | <a href="#U"><strong>U</strong></a>
  | <a href="#V"><strong>V</strong></a>
- | <a href="#W"><strong>W</strong></a>
  
 </div>
 <h2 id="A">A</h2>
@@ -223,14 +222,12 @@
         <li><a href="qop.html#qop.tasks.Task.color_repr">(qop.tasks.Task method)</a>
 </li>
       </ul></li>
-      <li><a href="qop.html#qop.cli.color_status">color_status() (in module qop.cli)</a>
-</li>
       <li><a href="qop.html#qop.constants.Command">Command (class in qop.constants)</a>
+</li>
+      <li><a href="qop.html#qop.daemon.CommandMessage">CommandMessage (class in qop.daemon)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="qop.html#qop.daemon.CommandMessage">CommandMessage (class in qop.daemon)</a>
-</li>
       <li><a href="qop.html#qop.constants.TaskType.CONVERT">CONVERT (qop.constants.TaskType attribute)</a>
 </li>
       <li><a href="qop.html#qop.tasks.TaskQueue.convert_processes">convert_processes (qop.tasks.TaskQueue attribute)</a>
@@ -331,19 +328,15 @@
 </li>
       <li><a href="qop.html#qop.exceptions.FileExistsAndIsIdenticalError">FileExistsAndIsIdenticalError</a>
 </li>
-      <li><a href="qop.html#qop.exceptions.FileExistsAndShouldBeSkippedError">FileExistsAndShouldBeSkippedError</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="qop.html#qop.exceptions.FileExistsAndShouldBeSkippedError">FileExistsAndShouldBeSkippedError</a>
+</li>
       <li><a href="qop.html#qop.tasks.FileTask">FileTask (class in qop.tasks)</a>
 </li>
       <li><a href="qop.html#qop.tasks.TaskQueue.flush">flush() (qop.tasks.TaskQueue method)</a>
 </li>
       <li><a href="qop.html#qop.tasks.QueueProgress.fmt_summary">fmt_summary() (qop.tasks.QueueProgress method)</a>
-</li>
-      <li><a href="qop.html#qop.cli.format_response">format_response() (in module qop.cli)</a>
-</li>
-      <li><a href="qop.html#qop.cli.format_response_summary">format_response_summary() (in module qop.cli)</a>
 </li>
       <li><a href="qop.html#qop.converters.Converter.from_dict">from_dict() (qop.converters.Converter static method)</a>
 
@@ -367,8 +360,6 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="qop.html#qop.utils.get_project_root">get_project_root() (in module qop.utils)</a>
-</li>
       <li><a href="qop.html#qop.daemon.QopClient.get_queue_progress">get_queue_progress() (qop.daemon.QopClient method)</a>
 </li>
   </ul></td>
@@ -379,34 +370,10 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="qop.html#qop.tasks.hammer_commit">hammer_commit() (in module qop.tasks)</a>
 </li>
-      <li><a href="qop.html#qop.cli.handle_convert">handle_convert() (in module qop.cli)</a>
-</li>
-      <li><a href="qop.html#qop.cli.handle_copy_move">handle_copy_move() (in module qop.cli)</a>
-</li>
-      <li><a href="qop.html#qop.cli.handle_daemon_destroy">handle_daemon_destroy() (in module qop.cli)</a>
-</li>
-      <li><a href="qop.html#qop.cli.handle_daemon_is_active">handle_daemon_is_active() (in module qop.cli)</a>
-</li>
-      <li><a href="qop.html#qop.cli.handle_daemon_restart">handle_daemon_restart() (in module qop.cli)</a>
-</li>
-      <li><a href="qop.html#qop.cli.handle_daemon_start">handle_daemon_start() (in module qop.cli)</a>
-</li>
-      <li><a href="qop.html#qop.cli.handle_daemon_stop">handle_daemon_stop() (in module qop.cli)</a>
+      <li><a href="qop.html#qop.daemon.QopDaemon.handle_request">handle_request() (qop.daemon.QopDaemon static method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="qop.html#qop.cli.handle_echo">handle_echo() (in module qop.cli)</a>
-</li>
-      <li><a href="qop.html#qop.cli.handle_missing_args">handle_missing_args() (in module qop.cli)</a>
-</li>
-      <li><a href="qop.html#qop.cli.handle_queue_progress">handle_queue_progress() (in module qop.cli)</a>
-</li>
-      <li><a href="qop.html#qop.cli.handle_re">handle_re() (in module qop.cli)</a>
-</li>
-      <li><a href="qop.html#qop.daemon.QopDaemon.handle_request">handle_request() (qop.daemon.QopDaemon static method)</a>
-</li>
-      <li><a href="qop.html#qop.cli.handle_simple_command">handle_simple_command() (in module qop.cli)</a>
-</li>
       <li><a href="qop.html#qop.daemon.RawMessage.header">header() (qop.daemon.RawMessage property)</a>
 </li>
       <li><a href="qop.html#qop.daemon.RawMessage.header_len">header_len() (qop.daemon.RawMessage property)</a>
@@ -419,12 +386,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="qop.html#qop.tasks.TaskQueue.is_active">is_active() (qop.tasks.TaskQueue method)</a>
 </li>
-      <li><a href="qop.html#qop.utils.is_daemon_active">is_daemon_active() (in module qop.utils)</a>
-
-      <ul>
-        <li><a href="qop.html#qop.daemon.QopClient.is_daemon_active">(qop.daemon.QopClient method)</a>
+      <li><a href="qop.html#qop.daemon.QopClient.is_daemon_active">is_daemon_active() (qop.daemon.QopClient method)</a>
 </li>
-      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="qop.html#qop.daemon.QopDaemon.is_listening">is_listening() (qop.daemon.QopDaemon property)</a>
@@ -455,8 +418,6 @@
       <ul>
         <li><a href="qop.html#module-qop">qop</a>
 </li>
-        <li><a href="qop.html#module-qop.cli">qop.cli</a>
-</li>
         <li><a href="qop.html#module-qop.constants">qop.constants</a>
 </li>
         <li><a href="qop.html#module-qop.converters">qop.converters</a>
@@ -468,8 +429,6 @@
         <li><a href="qop.html#module-qop.scanners">qop.scanners</a>
 </li>
         <li><a href="qop.html#module-qop.tasks">qop.tasks</a>
-</li>
-        <li><a href="qop.html#module-qop.utils">qop.utils</a>
 </li>
       </ul></li>
   </ul></td>
@@ -562,13 +521,6 @@
 </li>
       </ul></li>
       <li>
-    qop.cli
-
-      <ul>
-        <li><a href="qop.html#module-qop.cli">module</a>
-</li>
-      </ul></li>
-      <li>
     qop.constants
 
       <ul>
@@ -612,13 +564,6 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li>
-    qop.utils
-
-      <ul>
-        <li><a href="qop.html#module-qop.utils">module</a>
-</li>
-      </ul></li>
       <li><a href="qop.html#qop.daemon.QopClient">QopClient (class in qop.daemon)</a>
 </li>
       <li><a href="qop.html#qop.daemon.QopDaemon">QopDaemon (class in qop.daemon)</a>
@@ -798,14 +743,6 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="qop.html#qop.constants.PayloadClass.VALUE">VALUE (qop.constants.PayloadClass attribute)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="W">W</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="qop.html#qop.cli.wait_for_daemon">wait_for_daemon() (in module qop.cli)</a>
 </li>
   </ul></td>
 </tr></table>
