deploy: 5e976bfcba9dc5042230185dbeb79586289d8974

--- a/genindex.html
+++ b/genindex.html
@@ -171,6 +171,7 @@
  | <a href="#T"><strong>T</strong></a>
  | <a href="#U"><strong>U</strong></a>
  | <a href="#V"><strong>V</strong></a>
+ | <a href="#W"><strong>W</strong></a>
  
 </div>
 <h2 id="A">A</h2>
@@ -195,6 +196,10 @@
 
 <h2 id="B">B</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="qop.html#qop.scanners.BlacklistScanner">BlacklistScanner (class in qop.scanners)</a>
+</li>
+  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="qop.html#qop.daemon.RawMessage.body">body() (qop.daemon.RawMessage property)</a>
 </li>
@@ -487,16 +492,18 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="qop.html#qop.tasks.Task.parent_oid">parent_oid (qop.tasks.Task attribute)</a>
 </li>
+      <li><a href="qop.html#qop.scanners.PassScanner">PassScanner (class in qop.scanners)</a>
+</li>
       <li><a href="qop.html#qop.constants.PayloadClass">PayloadClass (class in qop.constants)</a>
 </li>
       <li><a href="qop.html#qop.tasks.TaskQueue.peek">peek() (qop.tasks.TaskQueue method)</a>
 </li>
       <li><a href="qop.html#qop.constants.Status.PENDING">PENDING (qop.constants.Status attribute)</a>
 </li>
-      <li><a href="qop.html#qop.tasks.TaskQueue.pop">pop() (qop.tasks.TaskQueue method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="qop.html#qop.tasks.TaskQueue.pop">pop() (qop.tasks.TaskQueue method)</a>
+</li>
       <li><a href="qop.html#qop.daemon.QopDaemon.port">port (qop.daemon.QopDaemon attribute)</a>
 </li>
       <li><a href="qop.html#qop.tasks.TaskQueue.print">print() (qop.tasks.TaskQueue method)</a>
@@ -615,11 +622,13 @@
 </li>
         <li><a href="qop.html#qop.converters.OggConverter.run">(qop.converters.OggConverter method)</a>
 </li>
+        <li><a href="qop.html#qop.scanners.BlacklistScanner.run">(qop.scanners.BlacklistScanner method)</a>
+</li>
+        <li><a href="qop.html#qop.scanners.PassScanner.run">(qop.scanners.PassScanner method)</a>
+</li>
         <li><a href="qop.html#qop.scanners.Scanner.run">(qop.scanners.Scanner method)</a>
 </li>
-        <li><a href="qop.html#qop.scanners.ScannerBlacklist.run">(qop.scanners.ScannerBlacklist method)</a>
-</li>
-        <li><a href="qop.html#qop.scanners.ScannerWhitelist.run">(qop.scanners.ScannerWhitelist method)</a>
+        <li><a href="qop.html#qop.scanners.WhitelistScanner.run">(qop.scanners.WhitelistScanner method)</a>
 </li>
         <li><a href="qop.html#qop.tasks.ConvertTask.run">(qop.tasks.ConvertTask method)</a>
 </li>
@@ -652,10 +661,6 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="qop.html#qop.scanners.Scanner">Scanner (class in qop.scanners)</a>
 </li>
-      <li><a href="qop.html#qop.scanners.ScannerBlacklist">ScannerBlacklist (class in qop.scanners)</a>
-</li>
-      <li><a href="qop.html#qop.scanners.ScannerWhitelist">ScannerWhitelist (class in qop.scanners)</a>
-</li>
       <li><a href="qop.html#qop.daemon.QopClient.send_command">send_command() (qop.daemon.QopClient method)</a>
 </li>
       <li><a href="qop.html#qop.tasks.TaskQueue.set_status">set_status() (qop.tasks.TaskQueue method)</a>
@@ -664,10 +669,10 @@
 </li>
       <li><a href="qop.html#qop.constants.Status.SKIP">SKIP (qop.constants.Status attribute)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="qop.html#qop.constants.TaskType.SLEEP">SLEEP (qop.constants.TaskType attribute)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="qop.html#qop.tasks.SleepTask">SleepTask (class in qop.tasks)</a>
 </li>
       <li><a href="qop.html#qop.tasks.ConvertTask.spawn">spawn() (qop.tasks.ConvertTask method)</a>
@@ -728,6 +733,8 @@
 </li>
       <li><a href="qop.html#qop.tasks.TaskQueue.transfer_processes">transfer_processes (qop.tasks.TaskQueue attribute)</a>
 </li>
+      <li><a href="qop.html#qop.converters.Converter.transfer_tags">transfer_tags() (qop.converters.Converter method)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -743,6 +750,14 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="qop.html#qop.constants.PayloadClass.VALUE">VALUE (qop.constants.PayloadClass attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="W">W</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="qop.html#qop.scanners.WhitelistScanner">WhitelistScanner (class in qop.scanners)</a>
 </li>
   </ul></td>
 </tr></table>
