deploy: 8a18b4810b53b9776f4470acc7cd82360d0dd39a

--- a/genindex.html
+++ b/genindex.html
@@ -271,10 +271,10 @@
 </li>
       <li><a href="qop.html#qop.constants.Command.DAEMON_START">DAEMON_START (qop.constants.Command attribute)</a>
 </li>
-      <li><a href="qop.html#qop.constants.Command.DAEMON_STOP">DAEMON_STOP (qop.constants.Command attribute)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="qop.html#qop.constants.Command.DAEMON_STOP">DAEMON_STOP (qop.constants.Command attribute)</a>
+</li>
       <li><a href="qop.html#qop.daemon.RawMessage.decode">decode() (qop.daemon.RawMessage method)</a>
 </li>
       <li><a href="qop.html#qop.constants.TaskType.DELETE">DELETE (qop.constants.TaskType attribute)</a>
@@ -282,11 +282,7 @@
       <li><a href="qop.html#qop.tasks.DeleteTask">DeleteTask (class in qop.tasks)</a>
 </li>
       <li><a href="qop.html#qop.converters.Converter.do_remove_art">do_remove_art() (qop.converters.Converter method)</a>
-
-      <ul>
-        <li><a href="qop.html#qop.converters.Mp3Converter.do_remove_art">(qop.converters.Mp3Converter method)</a>
 </li>
-      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -611,6 +607,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="qop.html#qop.daemon.RawMessage">RawMessage (class in qop.daemon)</a>
 </li>
+      <li><a href="qop.html#qop.converters.Converter.remove_art">remove_art (qop.converters.Converter attribute)</a>
+</li>
       <li><a href="qop.html#qop.tasks.TaskQueue.reset_active_tasks">reset_active_tasks() (qop.tasks.TaskQueue method)</a>
 </li>
       <li><a href="qop.html#qop.converters.Converter.run">run() (qop.converters.Converter method)</a>
@@ -732,8 +730,6 @@
       <li><a href="qop.html#qop.tasks.QueueProgress.total">total() (qop.tasks.QueueProgress property)</a>
 </li>
       <li><a href="qop.html#qop.tasks.TaskQueue.transfer_processes">transfer_processes (qop.tasks.TaskQueue attribute)</a>
-</li>
-      <li><a href="qop.html#qop.converters.Converter.transfer_tags">transfer_tags() (qop.converters.Converter method)</a>
 </li>
   </ul></td>
 </tr></table>
